# Pixara

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci-public.yml
docs/: PRIVACY.md
public/: LICENSE  PUBLISHING.md  setup-windows-heic.ps1
scripts/: build-public.ps1  copy-heic-dlls.ps1  pre-ship.ps1  verify-portable-public.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: batch_convert.rs  bench.rs  cancel.rs  commands.rs  config.rs  convert_guard.rs  convert_progress.rs  engine.rs  formats.rs  heic_decode.rs  heic_decode_libheif.rs  ingest.rs  lib.rs  main.rs  metadata.rs  naming.rs  png_optimize.rs  preview_scope.rs  privacy_strip.rs  rezip.rs  supported.rs  system.rs  test_fixtures.rs  thumbnails.rs  types.rs
src-tauri/tests/fixtures/: .gitkeep  sample.avif  sample.tiff  sample_1.avif  sample_2.avif  sample_2.tiff
src/components/: control-panel.tsx  conversion-status-bar.tsx  drop-zone.tsx  file-queue.tsx  metadata-notice.tsx  queue-file-name.tsx  queue-list-row.tsx  queue-thumbnail.tsx  rename-dialog.tsx  right-sidebar.tsx  settings-panel.tsx
src/hooks/: use-converter.ts
src/lib/: config-capabilities.test.ts  config-capabilities.ts  conversion-progress.test.ts  conversion-progress.ts  convert-validation.test.ts  convert-validation.ts  dimensions.test.ts  dimensions.ts  formats.ts  (+14 more)
tools/: export-to-public.ps1  verify-public-folder.ps1
(+1 files in other folders)
