[package]
name = "gv-pixara"
version = "0.1.0"
description = "GV Pixara - instant high-quality image conversion"
authors = ["GV"]
edition = "2021"
default-run = "gv-pixara"

[features]
default = []
heic = ["dep:libheif-rs"]

[lib]
name = "gv_pixara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gv-pixara"
path = "src/main.rs"

[[bin]]
name = "gv-bench"
path = "src/bin/gv-bench.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff", "avif"] }
libheif-rs = { version = "2.7", features = ["image"], optional = true }
zip = "2.2"
walkdir = "2"
rayon = "1"
kamadak-exif = "0.6"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
webp = "0.3"
png = "0.17"
oxipng = { version = "10.1", default-features = false, features = ["parallel", "zopfli"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Graphics_Dxgi"] }
